// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OE - Accordion flush variant renders correctly 1`] = `
<jest>
  <div
    class="bcl-accordion accordion accordion-flush"
    id="accordion-1"
  >
    <div
      class="accordion-item"
    >
      <h2
        class="accordion-header"
        id="heading-1-1"
      >
        <button
          aria-controls="collapse-1-1"
          aria-expanded="false"
          autocomplete="off"
          class="accordion-button"
          data-bs-target="#collapse-1-1"
          data-bs-toggle="collapse"
          type="button"
        >
          Accordion Item #1
        </button>
      </h2>
      <div
        aria-labelledby="heading-1-1"
        class="accordion-collapse collapse show"
        data-bs-parent="#accordion-1"
        id="collapse-1-1"
        role="region"
      >
        <div
          class="accordion-body"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit.  Duis fermentum facilisis ex, ac porta massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
          <br />
            Duis fermentum facilisis ex, ac porta massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit.  Duis fermentum facilisis ex, ac porta massa. 
          <br />
           Lorem ipsum dolor sit amet, consectetur adipiscing elit.  Duis fermentum facilisis ex, ac porta massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
          <br />
          <br />
            Duis fermentum facilisis ex, ac porta massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit.  Duis fermentum facilisis ex, ac porta massa. 
          <br />
           Lorem ipsum dolor sit amet, consectetur adipiscing elit.  Duis fermentum facilisis ex, ac porta massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
          <br />
            Duis fermentum facilisis ex, ac porta massa.
        </div>
      </div>
    </div>
    <div
      class="accordion-item"
    >
      <h2
        class="accordion-header"
        id="heading-1-2"
      >
        <button
          aria-controls="collapse-1-2"
          aria-expanded="false"
          autocomplete="off"
          class="accordion-button collapsed"
          data-bs-target="#collapse-1-2"
          data-bs-toggle="collapse"
          type="button"
        >
          Accordion Item #2
        </button>
      </h2>
      <div
        aria-labelledby="heading-1-2"
        class="accordion-collapse collapse"
        data-bs-parent="#accordion-1"
        id="collapse-1-2"
        role="region"
      >
        <div
          class="accordion-body"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit.  Duis fermentum facilisis ex, ac porta massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
          <br />
            Duis fermentum facilisis ex, ac porta massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit.  Duis fermentum facilisis ex, ac porta massa. 
          <br />
           Lorem ipsum dolor sit amet, consectetur adipiscing elit.  Duis fermentum facilisis ex, ac porta massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
          <br />
          <br />
            Duis fermentum facilisis ex, ac porta massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit.  Duis fermentum facilisis ex, ac porta massa. 
          <br />
        </div>
      </div>
    </div>
    <div
      class="accordion-item"
    >
      <h2
        class="accordion-header"
        id="heading-1-3"
      >
        <button
          aria-controls="collapse-1-3"
          aria-expanded="false"
          autocomplete="off"
          class="accordion-button collapsed"
          data-bs-target="#collapse-1-3"
          data-bs-toggle="collapse"
          type="button"
        >
          Accordion Item #3
        </button>
      </h2>
      <div
        aria-labelledby="heading-1-3"
        class="accordion-collapse collapse"
        data-bs-parent="#accordion-1"
        id="collapse-1-3"
        role="region"
      >
        <div
          class="accordion-body"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit.  Duis fermentum facilisis ex, ac porta massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
          <br />
            Duis fermentum facilisis ex, ac porta massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit.  Duis fermentum facilisis ex, ac porta massa. 
          <br />
           Lorem ipsum dolor sit amet, consectetur adipiscing elit.  Duis fermentum facilisis ex, ac porta massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
          <br />
          <br />
            Duis fermentum facilisis ex, ac porta massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit.  Duis fermentum facilisis ex, ac porta massa. 
          <br />
           Lorem ipsum dolor sit amet, consectetur adipiscing elit.  Duis fermentum facilisis ex, ac porta massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
          <br />
            Duis fermentum facilisis ex, ac porta massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit.  Duis fermentum facilisis ex, ac porta massa. 
          <br />
          <br />
           Lorem ipsum dolor sit amet, consectetur adipiscing elit.  Duis fermentum facilisis ex, ac porta massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
          <br />
            Duis fermentum facilisis ex, ac porta massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit.  Duis fermentum facilisis ex, ac porta massa. 
          <br />
           Lorem ipsum dolor sit amet, consectetur adipiscing elit.  Duis fermentum facilisis ex, ac porta massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
          <br />
          <br />
            Duis fermentum facilisis ex, ac porta massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit.  Duis fermentum facilisis ex, ac porta massa. 
          <br />
           Lorem ipsum dolor sit amet, consectetur adipiscing elit.  Duis fermentum facilisis ex, ac porta massa.
        </div>
      </div>
    </div>
  </div>
</jest>
`;

exports[`OE - Accordion renders correctly 1`] = `
<jest>
  <div
    class="bcl-accordion accordion"
    id="accordion-1"
  >
    <div
      class="accordion-item"
    >
      <h2
        class="accordion-header"
        id="heading-1-1"
      >
        <button
          aria-controls="collapse-1-1"
          aria-expanded="false"
          autocomplete="off"
          class="accordion-button"
          data-bs-target="#collapse-1-1"
          data-bs-toggle="collapse"
          type="button"
        >
          Accordion Item #1
        </button>
      </h2>
      <div
        aria-labelledby="heading-1-1"
        class="accordion-collapse collapse show"
        data-bs-parent="#accordion-1"
        id="collapse-1-1"
        role="region"
      >
        <div
          class="accordion-body"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit.  Duis fermentum facilisis ex, ac porta massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
          <br />
            Duis fermentum facilisis ex, ac porta massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit.  Duis fermentum facilisis ex, ac porta massa. 
          <br />
           Lorem ipsum dolor sit amet, consectetur adipiscing elit.  Duis fermentum facilisis ex, ac porta massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
          <br />
          <br />
            Duis fermentum facilisis ex, ac porta massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit.  Duis fermentum facilisis ex, ac porta massa. 
          <br />
           Lorem ipsum dolor sit amet, consectetur adipiscing elit.  Duis fermentum facilisis ex, ac porta massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
          <br />
            Duis fermentum facilisis ex, ac porta massa.
        </div>
      </div>
    </div>
    <div
      class="accordion-item"
    >
      <h2
        class="accordion-header"
        id="heading-1-2"
      >
        <button
          aria-controls="collapse-1-2"
          aria-expanded="false"
          autocomplete="off"
          class="accordion-button collapsed"
          data-bs-target="#collapse-1-2"
          data-bs-toggle="collapse"
          type="button"
        >
          Accordion Item #2
        </button>
      </h2>
      <div
        aria-labelledby="heading-1-2"
        class="accordion-collapse collapse"
        data-bs-parent="#accordion-1"
        id="collapse-1-2"
        role="region"
      >
        <div
          class="accordion-body"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit.  Duis fermentum facilisis ex, ac porta massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
          <br />
            Duis fermentum facilisis ex, ac porta massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit.  Duis fermentum facilisis ex, ac porta massa. 
          <br />
           Lorem ipsum dolor sit amet, consectetur adipiscing elit.  Duis fermentum facilisis ex, ac porta massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
          <br />
          <br />
            Duis fermentum facilisis ex, ac porta massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit.  Duis fermentum facilisis ex, ac porta massa. 
          <br />
        </div>
      </div>
    </div>
    <div
      class="accordion-item"
    >
      <h2
        class="accordion-header"
        id="heading-1-3"
      >
        <button
          aria-controls="collapse-1-3"
          aria-expanded="false"
          autocomplete="off"
          class="accordion-button collapsed"
          data-bs-target="#collapse-1-3"
          data-bs-toggle="collapse"
          type="button"
        >
          Accordion Item #3
        </button>
      </h2>
      <div
        aria-labelledby="heading-1-3"
        class="accordion-collapse collapse"
        data-bs-parent="#accordion-1"
        id="collapse-1-3"
        role="region"
      >
        <div
          class="accordion-body"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit.  Duis fermentum facilisis ex, ac porta massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
          <br />
            Duis fermentum facilisis ex, ac porta massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit.  Duis fermentum facilisis ex, ac porta massa. 
          <br />
           Lorem ipsum dolor sit amet, consectetur adipiscing elit.  Duis fermentum facilisis ex, ac porta massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
          <br />
          <br />
            Duis fermentum facilisis ex, ac porta massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit.  Duis fermentum facilisis ex, ac porta massa. 
          <br />
           Lorem ipsum dolor sit amet, consectetur adipiscing elit.  Duis fermentum facilisis ex, ac porta massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
          <br />
            Duis fermentum facilisis ex, ac porta massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit.  Duis fermentum facilisis ex, ac porta massa. 
          <br />
          <br />
           Lorem ipsum dolor sit amet, consectetur adipiscing elit.  Duis fermentum facilisis ex, ac porta massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
          <br />
            Duis fermentum facilisis ex, ac porta massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit.  Duis fermentum facilisis ex, ac porta massa. 
          <br />
           Lorem ipsum dolor sit amet, consectetur adipiscing elit.  Duis fermentum facilisis ex, ac porta massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
          <br />
          <br />
            Duis fermentum facilisis ex, ac porta massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit.  Duis fermentum facilisis ex, ac porta massa. 
          <br />
           Lorem ipsum dolor sit amet, consectetur adipiscing elit.  Duis fermentum facilisis ex, ac porta massa.
        </div>
      </div>
    </div>
  </div>
</jest>
`;

exports[`OE - Accordion with custom title tags renders correctly 1`] = `
<jest>
  <div
    class="bcl-accordion accordion"
    id="accordion-1"
  >
    <div
      class="accordion-item"
    >
      <h5
        class="accordion-header"
        id="heading-1-1"
      >
        <button
          aria-controls="collapse-1-1"
          aria-expanded="false"
          autocomplete="off"
          class="accordion-button"
          data-bs-target="#collapse-1-1"
          data-bs-toggle="collapse"
          type="button"
        >
          Accordion Item #1
        </button>
      </h5>
      <div
        aria-labelledby="heading-1-1"
        class="accordion-collapse collapse show"
        data-bs-parent="#accordion-1"
        id="collapse-1-1"
        role="region"
      >
        <div
          class="accordion-body"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit.  Duis fermentum facilisis ex, ac porta massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
          <br />
            Duis fermentum facilisis ex, ac porta massa.
        </div>
      </div>
    </div>
    <div
      class="accordion-item"
    >
      <h4
        class="accordion-header"
        id="heading-1-2"
      >
        <button
          aria-controls="collapse-1-2"
          aria-expanded="false"
          autocomplete="off"
          class="accordion-button collapsed"
          data-bs-target="#collapse-1-2"
          data-bs-toggle="collapse"
          type="button"
        >
          Accordion Item #2
        </button>
      </h4>
      <div
        aria-labelledby="heading-1-2"
        class="accordion-collapse collapse"
        data-bs-parent="#accordion-1"
        id="collapse-1-2"
        role="region"
      >
        <div
          class="accordion-body"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit.  Duis fermentum facilisis ex, ac porta massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
          <br />
            Duis fermentum facilisis ex, ac porta massa.
        </div>
      </div>
    </div>
    <div
      class="accordion-item"
    >
      <h3
        class="accordion-header"
        id="heading-1-3"
      >
        <button
          aria-controls="collapse-1-3"
          aria-expanded="false"
          autocomplete="off"
          class="accordion-button collapsed"
          data-bs-target="#collapse-1-3"
          data-bs-toggle="collapse"
          type="button"
        >
          Accordion Item #3
        </button>
      </h3>
      <div
        aria-labelledby="heading-1-3"
        class="accordion-collapse collapse"
        data-bs-parent="#accordion-1"
        id="collapse-1-3"
        role="region"
      >
        <div
          class="accordion-body"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit.  Duis fermentum facilisis ex, ac porta massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
          <br />
            Duis fermentum facilisis ex, ac porta massa.
        </div>
      </div>
    </div>
  </div>
</jest>
`;

exports[`OE - Accordion with main title renders correctly 1`] = `
<jest>
  <div
    class="bcl-accordion accordion"
    id="accordion-1"
  >
    <h4
      class="bcl-heading"
    >
      <a
        class="standalone"
        href="/example.html"
      >
        A title created by the bcl heading template
      </a>
    </h4>
    <div
      class="accordion-item"
    >
      <h2
        class="accordion-header"
        id="heading-1-1"
      >
        <button
          aria-controls="collapse-1-1"
          aria-expanded="false"
          autocomplete="off"
          class="accordion-button"
          data-bs-target="#collapse-1-1"
          data-bs-toggle="collapse"
          type="button"
        >
          Accordion Item #1
        </button>
      </h2>
      <div
        aria-labelledby="heading-1-1"
        class="accordion-collapse collapse show"
        data-bs-parent="#accordion-1"
        id="collapse-1-1"
        role="region"
      >
        <div
          class="accordion-body"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit.  Duis fermentum facilisis ex, ac porta massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
          <br />
            Duis fermentum facilisis ex, ac porta massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit.  Duis fermentum facilisis ex, ac porta massa. 
          <br />
           Lorem ipsum dolor sit amet, consectetur adipiscing elit.  Duis fermentum facilisis ex, ac porta massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
          <br />
          <br />
            Duis fermentum facilisis ex, ac porta massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit.  Duis fermentum facilisis ex, ac porta massa. 
          <br />
           Lorem ipsum dolor sit amet, consectetur adipiscing elit.  Duis fermentum facilisis ex, ac porta massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
          <br />
            Duis fermentum facilisis ex, ac porta massa.
        </div>
      </div>
    </div>
    <div
      class="accordion-item"
    >
      <h2
        class="accordion-header"
        id="heading-1-2"
      >
        <button
          aria-controls="collapse-1-2"
          aria-expanded="false"
          autocomplete="off"
          class="accordion-button collapsed"
          data-bs-target="#collapse-1-2"
          data-bs-toggle="collapse"
          type="button"
        >
          Accordion Item #2
        </button>
      </h2>
      <div
        aria-labelledby="heading-1-2"
        class="accordion-collapse collapse"
        data-bs-parent="#accordion-1"
        id="collapse-1-2"
        role="region"
      >
        <div
          class="accordion-body"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit.  Duis fermentum facilisis ex, ac porta massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
          <br />
            Duis fermentum facilisis ex, ac porta massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit.  Duis fermentum facilisis ex, ac porta massa. 
          <br />
           Lorem ipsum dolor sit amet, consectetur adipiscing elit.  Duis fermentum facilisis ex, ac porta massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
          <br />
          <br />
            Duis fermentum facilisis ex, ac porta massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit.  Duis fermentum facilisis ex, ac porta massa. 
          <br />
        </div>
      </div>
    </div>
    <div
      class="accordion-item"
    >
      <h2
        class="accordion-header"
        id="heading-1-3"
      >
        <button
          aria-controls="collapse-1-3"
          aria-expanded="false"
          autocomplete="off"
          class="accordion-button collapsed"
          data-bs-target="#collapse-1-3"
          data-bs-toggle="collapse"
          type="button"
        >
          Accordion Item #3
        </button>
      </h2>
      <div
        aria-labelledby="heading-1-3"
        class="accordion-collapse collapse"
        data-bs-parent="#accordion-1"
        id="collapse-1-3"
        role="region"
      >
        <div
          class="accordion-body"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit.  Duis fermentum facilisis ex, ac porta massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
          <br />
            Duis fermentum facilisis ex, ac porta massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit.  Duis fermentum facilisis ex, ac porta massa. 
          <br />
           Lorem ipsum dolor sit amet, consectetur adipiscing elit.  Duis fermentum facilisis ex, ac porta massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
          <br />
          <br />
            Duis fermentum facilisis ex, ac porta massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit.  Duis fermentum facilisis ex, ac porta massa. 
          <br />
           Lorem ipsum dolor sit amet, consectetur adipiscing elit.  Duis fermentum facilisis ex, ac porta massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
          <br />
            Duis fermentum facilisis ex, ac porta massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit.  Duis fermentum facilisis ex, ac porta massa. 
          <br />
          <br />
           Lorem ipsum dolor sit amet, consectetur adipiscing elit.  Duis fermentum facilisis ex, ac porta massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
          <br />
            Duis fermentum facilisis ex, ac porta massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit.  Duis fermentum facilisis ex, ac porta massa. 
          <br />
           Lorem ipsum dolor sit amet, consectetur adipiscing elit.  Duis fermentum facilisis ex, ac porta massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
          <br />
          <br />
            Duis fermentum facilisis ex, ac porta massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit.  Duis fermentum facilisis ex, ac porta massa. 
          <br />
           Lorem ipsum dolor sit amet, consectetur adipiscing elit.  Duis fermentum facilisis ex, ac porta massa.
        </div>
      </div>
    </div>
  </div>
</jest>
`;
